# siberia

./: .gitignore  LICENSE  README.md  pyproject.toml  siberia  skills-lock.json
.github/workflows/: ci.yml  release.yml
docs/homebrew/: siberia.rb
docs/superpowers/plans/: 2026-05-13-supply-chain-cooling-shim.md  2026-05-14-package-manager-hardening.md  2026-05-15-siberia-config-shellenv.md  2026-05-18-version-0.2.0-release.md
docs/superpowers/runbooks/: cooling-shim-local-setup.md  github-runners-and-releases.md
docs/superpowers/specs/: 2026-05-13-supply-chain-cooling-design.md  2026-05-14-package-manager-hardening-design.md  2026-05-15-siberia-config-shellenv-design.md  2026-05-18-version-0.2.0-release-design.md
scripts/: install_shims.py
siberia/: __init__.py  cli.py
src/cooling_shim/: cache.py  cli.py  config.py  dispatch.py  errors.py  installer.py  models.py  native.py  npm_registry.py  npx.py  real_bin.py
src/siberia/: __init__.py  cli.py
tests/: test_cli.py  test_dispatch.py  test_installer.py  test_main.py  test_native.py  test_npx.py  test_siberia.py
