[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "siberia"
version = "0.4.0"
description = "Supply-chain hardening and lockfile auditing for pip, uv, npm, pnpm, Bun, Deno, and Cargo"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Cavanaug" },
]
keywords = ["security", "supply-chain", "cli", "uv", "npm", "pnpm", "bun", "deno", "pip", "cargo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/cavanaug/siberia"
Repository = "https://github.com/cavanaug/siberia"
Issues = "https://github.com/cavanaug/siberia/issues"
Releases = "https://github.com/cavanaug/siberia/releases"

[project.scripts]
siberia = "siberia.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
